fixed z-index of musicgot

--- a/src/core/MusicGoT/_MusicGoT.scss
+++ b/src/core/MusicGoT/_MusicGoT.scss
@@ -6,6 +6,7 @@
   left: 0;
   top: 0;
   height: 100%;
+  z-index: 5;
 }
 
 .MusicGoT__controls {
